refactor: streamline imports and improve limit handling across services